@@ -2150,6 +2150,8 @@ code {
 
 <p><strong>power.disable_equip_slots</strong> | <code>list(predefined_string)</code> | Passive powers only. A comma separated list of equip slot types to disable when this power is active.</p>
 
+<p><strong>power.post_hazards_skip_target</strong> | <code>bool</code> | When this power's hazard hits a target, this property determines if hazards spawned by post_power can hit the same target.</p>
+
 <hr />
 
 <h4>QuestLog</h4>
